Update paths in default.mpcpl

--- a/App/AppInfo/Launcher/MPC-HCPortable.ini
+++ b/App/AppInfo/Launcher/MPC-HCPortable.ini
@@ -38,3 +38,21 @@ File=%PAL:DataDir%\settings\mpc-hc.ini
 Type=Replace
 Find=SNAPSHOTPATHDEFAULT
 Replace=%PortableApps.comPictures%
+
+[FileWrite6]
+File=%PAL:DataDir%\settings\default.mpcpl
+Type=Replace
+Find=%PAL:LastDrive%%PAL:LastPackagePartialDir%\
+Replace=%PAL:Drive%%PAL:PackagePartialDir%\
+
+[FileWrite7]
+File=%PAL:DataDir%\settings\default.mpcpl
+Type=Replace
+Find=%PAL:LastPortableAppsBaseDir%\
+Replace=%PAL:PortableAppsBaseDir%\
+
+[FileWrite8]
+File=%PAL:DataDir%\settings\default.mpcpl
+Type=Replace
+Find=%PAL:LastDrive%\
+Replace=%PAL:Drive%\
