Add Donate links where appropriate, add language handling

--- a/App/AppInfo/AppInfo.ini
+++ b/App/AppInfo/AppInfo.ini
@@ -1,12 +1,13 @@
 [Format]
 Type=PortableApps.comFormat
-Version=3.0
+Version=3.4
 
 [Details]
 Name=Media Player Classic - Home Cinema Portable
 AppID=MPC-HCPortable
 Publisher=MPC-HC Team & PortableApps.com
 Homepage=portableapps.com/apps/music_video/mpc-hc-portable
+Donate=https://mpc-hc.org/donate/
 Category=Music & Video
 Description=Lightweight media player
 Language=Multilingual
@@ -18,8 +19,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=1.7.10.0
-DisplayVersion=1.7.10
+PackageVersion=1.7.10.1
+DisplayVersion=1.7.10 Rev 2
 
 [Control]
 Icons=1
