--- a/App/AppInfo/Launcher/MPC-HCPortable.ini
+++ b/App/AppInfo/Launcher/MPC-HCPortable.ini
@@ -56,3 +56,19 @@ File=%PAL:DataDir%\settings\default.mpcpl
 Type=Replace
 Find=%PAL:LastDrive%\
 Replace=%PAL:Drive%\
+
+[FileWrite9]
+File=%PAL:DataDir%\settings\mpc-hc.ini
+Type=INI
+Section=Settings
+Key=InterfaceLanguage
+Value=%PAL:LanguageCustom%
+
+[Language]
+Base=%PortableApps.comLocaleID%
+
+[LanguageFile]
+Type=INI
+File=%PAL:DataDir%\settings\mpc-hc.ini
+Section=Settings
+Key=InterfaceLanguage
